--- a/SoftwareEngineering2020/src/group2_GUI/ManageMaintenance.form
+++ b/SoftwareEngineering2020/src/group2_GUI/ManageMaintenance.form
@@ -166,6 +166,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Show"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ShowButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="WeekText">
           <Events>
