--- a/SoftwareEngineering2020/src/group2_GUI/ManageMaintenance.form
+++ b/SoftwareEngineering2020/src/group2_GUI/ManageMaintenance.form
@@ -228,6 +228,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Select2"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Select2ButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="Select3Button">
           <Properties>
@@ -236,6 +239,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Select3"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Select3ButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="Select4Button">
           <Properties>
@@ -244,6 +250,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Select4"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="Select4ButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
