--- a/SoftwareEngineering2020/src/group2_GUI/MaintenanceActivityVerification.form
+++ b/SoftwareEngineering2020/src/group2_GUI/MaintenanceActivityVerification.form
@@ -87,7 +87,7 @@
                                   </Group>
                                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="SkillsText" min="-2" pref="166" max="-2" attributes="0"/>
+                                      <Component id="SkillsText1" min="-2" pref="166" max="-2" attributes="0"/>
                                       <Component id="ForwardButton" min="-2" pref="166" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -123,7 +123,7 @@
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="NotesText" min="-2" pref="122" max="-2" attributes="0"/>
-                              <Component id="SkillsText" alignment="0" min="-2" pref="122" max="-2" attributes="0"/>
+                              <Component id="SkillsText1" alignment="0" min="-2" pref="122" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="ForwardButton" min="-2" pref="40" max="-2" attributes="0"/>
@@ -190,7 +190,7 @@
             <Property name="text" type="java.lang.String" value="Skills Needed"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="SkillsText">
+        <Component class="javax.swing.JTextField" name="SkillsText1">
         </Component>
         <Component class="javax.swing.JButton" name="SMPButton">
           <Properties>
